--- a/build.gradle
+++ b/build.gradle
@@ -32,3 +32,11 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'be.freehoebeke.secondbrainfh23.SecondBrainFh23Application'
+        )
+    }
+}
