--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ build.mustRunAfter clean
 
 task copyToLib(type: Copy) {
     into "$buildDir/libs"
-    from(configurations.implementation)
+    from(configurations.runtimeClasspath)
 }
 
 stage.dependsOn(copyToLib)
