--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
-    implementation 'com.github.jsimone:webapp-runner:8.5.11.3'
+//    implementation 'com.github.jsimone:webapp-runner:8.5.11.3'
 }
 
 tasks.named('test') {
@@ -43,12 +43,12 @@ tasks.named('test') {
 //  }
 //}
 
-task stage(dependsOn: ['build', 'clean'])
-build.mustRunAfter clean
+//task stage(dependsOn: ['build', 'clean'])
+//build.mustRunAfter clean
 
-task copyToLib(type: Copy) {
-    into "$buildDir/libs"
-    from(configurations.runtimeClasspath)
-}
+//task copyToLib(type: Copy) {
+//  into "$buildDir/libs"
+//  from(configurations.runtimeClasspath)
+//}
 
-stage.dependsOn(copyToLib)
+//stage.dependsOn(copyToLib)
